--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,8 @@ on:
 #
 # 2. Change these variables for your configuration:
 env:
-  AZURE_FUNCTIONAPP_NAME: process-home-data # set this to your application's name
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: './azure'   # set this to the path to your web app project, defaults to the repository root
+  AZURE_FUNCTIONAPP_NAME: cloud-scales # set this to your application's name
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: 'azure'   # set this to the path to your web app project, defaults to the repository root
   PYTHON_VERSION: '3.8'                 # set this to the python version to use (supports 3.6, 3.7, 3.8)
 
 jobs:
